[metadata]
name = vcstring
author = Ziwei He, Chris Chipot and Benoit Roux
author_email = ziweihe@uchicago.edu
maintainer = Ziwei He
maintainer_email = ziweihe@uchicago.edu
url = https://github.com/ziweih/committor_string
license = GPLv3
license_files =
    LICENSE
description = Committor-consistent variational string method

[options]
packages = find:
python_requires = >=3.8
install_requires =
    setuptools
    numpy
    cython


[options.package_data]
* = *.pyx
